# kaggle-indoor-navigation

./: .gitignore  404.html  Makefile  README.md  index.html  pydoc-markdown.yml  pyproject.toml  search.html  sitemap.xml
.github/actions/setup-poetry/: action.yml
.github/workflows/: main.yml
api-documentation/: index.html
docker/: jupyter-lab.dockerfile
notebooks/: data-formatter.py  environment-check.ipynb
search/: search_index.json
tests/data/: test_data_loader.py
tools/data/: __init__.py  data_loader.py
